2004-11-18	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c, terminal/terminal-window.c,
	  terminal/terminal-preferences.c: Added an option to disable all
	  menu access keys (such as Alt+f, etc.). This allows to pass key
	  combinations such as Alt+A to applications. The problem was
	  reported by Bernhard Walle.

2004-11-17	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Use g_object_connect() instead of
	  g_signal_connect()'s when connecting a large number of signals.
	* po/de.po, po/de.gmo: Small fix to shrink the size of the utmp/wtmp
	  translation.

2004-11-16	Benedikt Meurer <benny@xfce.org>

	* po/de.po, po/de.gmo: Translate `General' with `Allgemein' instead
	  of `Generell'. Thanks to Bernhard Walle <bernhard@bwalle.de> for
	  this tip.

2004-11-16	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Apply the color settings right after
	  the VTE widget was realized, and the background settings right
	  after the VTE widget was mapped. This should fix several problems
	  where the VTE widget was misdisplayed initially.

2004-11-15	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c, terminal/terminal-window.c:
	  Made the Preferences dialog and the `Set Title' dialog properly
	  accessible.

2004-11-15	Benedikt Meurer <benny@xfce.org>

	* Terminal.ui: Removed close-tab from the default right-click
	  menu.
	* terminal/terminal-toolbars-view.c: Added a right-click menu
	  to the toolbars that allows you to enter Editing mode.
	* terminal/terminal-window.c: Added '...' to menu items that require
	  further user input. Make close-tab insensitive if only one tab
	  is currently open.
	* terminal/terminal-preferences.c, terminal/terminal-widget.c,
	  terminal/terminal-preferences-dialog.c: Added an option to use
	  the terminal foreground and background color from the given
	  Gtk+ theme.
	* icons/48x48/Terminal-colors.png, icons/scalable/Terminal-colors.svg,