@@ -1,3 +1,11 @@
+2004-11-19	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-preferences.c, terminal/terminal-widget.c,
+	  terminal/terminal-preferences-dialog.c: Added an option to explicitly
+	  control the font antialiasing for the terminal window. Disabling
+	  this option can impressively speed up Terminal performance and
+	  reduce system load on slow systems.
+
 2004-11-18	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-preferences-dialog.c, terminal/terminal-window.c,
